# guardian

./: .env.example  .env.registry.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.registry.yml  docker-compose.yml
.agents/skills/release-guardian-sdk-packages/: SKILL.md
.agents/skills/smoke-test-rust-multisig-sdk/: SKILL.md
.agents/skills/smoke-test-ts-multisig-sdk/: SKILL.md
.agents/skills/speckit-implement/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml
crates/client/: Cargo.toml
crates/contracts/: Cargo.toml
crates/miden-multisig-client/: Cargo.toml
crates/server/: Cargo.toml
crates/server/migrations/2026-05-16-000001_admin_actions/: down.sql  up.sql
crates/server/migrations/2026-05-25-000001_delta_metadata/: down.sql  up.sql
crates/server/src/: delta_object.rs  error.rs  lib.rs  main.rs  openapi.rs  schema.rs  state_object.rs
crates/server/src/api/: dashboard.rs  dashboard_feeds.rs  evm.rs  grpc.rs  http.rs
crates/server/src/audit/: kinds.rs  log.rs  mod.rs  postgres.rs
crates/server/src/builder/: handle.rs  mod.rs  state.rs  storage.rs
crates/server/src/dashboard/: allowlist.rs  authz.rs  mod.rs  permissions.rs  probe.rs  state.rs  types.rs
crates/server/src/delta_summary/: build.rs  category.rs  decode.rs  mod.rs  projection.rs
crates/server/src/evm/: proposal.rs
crates/server/src/jobs/canonicalization/: processor.rs
crates/server/src/metadata/: network.rs  postgres.rs
crates/server/src/metadata/auth/: mod.rs
crates/server/src/middleware/: client_ip.rs  mod.rs  rate_limit.rs
crates/server/src/services/: account_status.rs  configure_account.rs  dashboard_account_delta_detail.rs  dashboard_account_deltas.rs  dashboard_account_proposals.rs  dashboard_account_snapshot.rs  dashboard_accounts.rs  dashboard_global_deltas.rs  dashboard_global_proposals.rs  dashboard_info.rs  dashboard_pagination.rs  delta_commit.rs  get_delta_proposal.rs  get_delta_proposals.rs  get_delta_since.rs  mod.rs  pause_account.rs  push_delta.rs  push_delta_proposal.rs  sign_delta_proposal.rs  unpause_account.rs
crates/server/src/storage/: filesystem.rs  mod.rs  postgres.rs
crates/server/src/testing/: helpers.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/: OPENAPI.md  README.md  SERVER_AWS_DEPLOY.md  openapi-client.json  openapi-dashboard.json  openapi-evm.json  openapi.json
examples/operator-smoke-web/: README.md  vite.config.ts
examples/operator-smoke-web/src/: App.tsx  index.css
examples/smoke-web/: package-lock.json
spec/: api.md
speckit/features/006-operator-authz/: data-model.md  spec.md
speckit/features/006-operator-authz/contracts/: allowlist.schema.json  dashboard-authz.openapi.yaml
speckit/features/007-dashboard-delta-details/: data-model.md  spec.md
speckit/features/007-dashboard-delta-details/contracts/: http-get-account-delta-detail.md  http-list-account-deltas.md  http-list-global-deltas.md
