[package]
name = "miden-multisig-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level SDK for interacting with multisig accounts on Miden via GUARDIAN"

[dependencies]
# Internal crates
guardian-client = { version = "=0.14.8", path = "../client" }
guardian-shared = { version = "=0.14.8", path = "../shared" }
miden-confidential-contracts = { version = "=0.14.8", path = "../contracts" }

# Miden
miden-client = { version = "=0.14.5", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "=0.14.5" }
miden-protocol = { version = "=0.14.5" }
miden-tx = { version = "=0.14.5" }
miden-standards = { version = "=0.14.5" }

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
rand = { workspace = true }

[features]
default = ["legacy-consume-notes"]
# Accept v1 `consume_notes` metadata (no `metadata_version`). The
# cut-over release will ship with `default = []`. Tracks issue #229.
legacy-consume-notes = []

[dev-dependencies]
tempfile = { workspace = true }
